# leapsys-ess-backend

./: package.json  pyproject.toml
leapsys_ess_backend/: hooks.py  modules.txt  patches.txt
leapsys_ess_backend/api/: approvals.py  crm.py  dashboard.py  directory.py  hr.py  shifts.py  todo.py
leapsys_ess_backend/patches/: force_sync2.py
leapsys_ess_backend/public/: build.json
leapsys_ess_backend/public/css/: chat_widget.css
leapsys_ess_backend/public/js/: chat_widget.js  leapsys_ess_backend.js
